Fix build, enable navbar by default

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -225,4 +225,5 @@
         <item>/sys/class/power_supply/Battery/scp_status</item>
     </string-array>
 
+    <bool name="config_showNavigationBar">true</bool>
 </resources>
