--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -22,4 +22,14 @@
          3 = right side
     -->
     <integer name="config_fingerprintSensorLocation">1</integer>
+
+    <bool name="config_show_regulatory_info">false</bool>
+
+    <!-- Whether to override specific vendor properties for
+         displaying information in about phone. Supported properties include:
+         Device Model(String) = "config_overridenVendorProductModel"
+         Security Patch = "ro.vendor.override.security_patch"
+         Build number = "ro.vendor.override.build_display"
+    -->
+    <string name="config_overridenVendorProductModel" translatable="false">Honor View 10</string>
 </resources>
