--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -32,4 +32,6 @@
          Build number = "ro.vendor.override.build_display"
     -->
     <string name="config_overridenVendorProductModel" translatable="false">Honor View 10</string>
+
+    <bool name="config_isCrappyLedDevice">true</bool>
 </resources>
