Force disable BLE always scan

--- a/overlay/frameworks/base/core/res/res/values/bools.xml
+++ b/overlay/frameworks/base/core/res/res/values/bools.xml
@@ -18,4 +18,6 @@
 
     <!-- Whether device supports an alt. ambient display -->
     <bool name="config_alt_ambient_display">true</bool>
+
+    <bool name="forceDisableAlwaysOnBle">true</bool>
 </resources>
